--- a/calculadora.css
+++ b/calculadora.css
@@ -102,7 +102,7 @@ h2 {
 }
 
 h2 span {
-  color: #c79e2d;
+  color: #e9c112;
   font-size: 45px;
   text-shadow: 1px 1px 1px #d1d9e6, 1px 1px 2px #d1d9e6, 3px 3px 3px #d1d9e6,
     4px 4px 4px #d1d9e6, 5px 5px 5px #d1d9e6, 6px 6px 6px #d1d9e6;
